--- a/ide/frames/project_versioninfo_options.lfm
+++ b/ide/frames/project_versioninfo_options.lfm
@@ -1,10 +1,10 @@
 object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
   Left = 0
-  Height = 428
+  Height = 431
   Top = 0
-  Width = 594
-  ClientHeight = 428
-  ClientWidth = 594
+  Width = 596
+  ClientHeight = 431
+  ClientWidth = 596
   TabOrder = 0
   DesignLeft = 273
   DesignTop = 145
@@ -15,23 +15,23 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 0
-    Height = 102
-    Top = 25
-    Width = 594
+    Height = 124
+    Top = 30
+    Width = 596
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BorderSpacing.Top = 6
     Caption = 'Version Numbering'
-    ClientHeight = 84
-    ClientWidth = 590
+    ClientHeight = 99
+    ClientWidth = 592
     TabOrder = 1
     object MajorVersionLabel: TLabel
       AnchorSideLeft.Control = VersionInfoGroupBox
       AnchorSideTop.Control = VersionInfoGroupBox
       Left = 6
-      Height = 15
+      Height = 20
       Top = 6
-      Width = 75
+      Width = 93
       BorderSpacing.Left = 6
       BorderSpacing.Top = 6
       BorderSpacing.Bottom = 3
@@ -44,9 +44,9 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = VersionInfoGroupBox
       Left = 131
-      Height = 15
+      Height = 20
       Top = 6
-      Width = 76
+      Width = 93
       BorderSpacing.Left = 55
       BorderSpacing.Top = 6
       BorderSpacing.Bottom = 3
@@ -59,9 +59,9 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = VersionInfoGroupBox
       Left = 256
-      Height = 15
+      Height = 20
       Top = 6
-      Width = 47
+      Width = 58
       BorderSpacing.Left = 55
       BorderSpacing.Top = 6
       BorderSpacing.Bottom = 3
@@ -74,9 +74,9 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = VersionInfoGroupBox
       Left = 381
-      Height = 15
+      Height = 20
       Top = 6
-      Width = 30
+      Width = 37
       BorderSpacing.Left = 55
       BorderSpacing.Top = 6
       BorderSpacing.Bottom = 3
@@ -89,8 +89,8 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideTop.Control = MajorVersionLabel
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 23
-      Top = 24
+      Height = 28
+      Top = 29
       Width = 70
       MaxValue = 65535
       TabOrder = 0
@@ -100,8 +100,8 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideTop.Control = MinorVersionLabel
       AnchorSideTop.Side = asrBottom
       Left = 131
-      Height = 23
-      Top = 24
+      Height = 28
+      Top = 29
       Width = 70
       MaxValue = 65535
       TabOrder = 1
@@ -111,8 +111,8 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideTop.Control = RevisionLabel
       AnchorSideTop.Side = asrBottom
       Left = 256
-      Height = 23
-      Top = 24
+      Height = 28
+      Top = 29
       Width = 70
       MaxValue = 65535
       TabOrder = 2
@@ -122,12 +122,14 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideTop.Control = MajorVersionSpinEdit
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 19
-      Top = 59
-      Width = 170
+      Height = 24
+      Top = 69
+      Width = 212
       BorderSpacing.Top = 6
       BorderSpacing.Around = 6
       Caption = 'Automatically increase Build'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 4
     end
     object BuildSpinEdit: TSpinEdit
@@ -135,8 +137,8 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideTop.Control = BuildLabel
       AnchorSideTop.Side = asrBottom
       Left = 381
-      Height = 23
-      Top = 24
+      Height = 28
+      Top = 29
       Width = 70
       MaxValue = 65535
       TabOrder = 3
@@ -148,12 +150,14 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 0
-    Height = 19
+    Height = 24
     Top = 0
-    Width = 594
+    Width = 596
     Anchors = [akTop, akLeft, akRight]
     Caption = 'Include Version Info in executable'
     OnChange = UseVersionInfoCheckBoxChange
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 0
   end
   object LanguageSettingsGroupBox: TGroupBox
@@ -166,23 +170,24 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
     AnchorSideBottom.Control = AttributesGroupBox
     AnchorSideBottom.Side = asrBottom
     Left = 239
-    Height = 131
-    Top = 133
-    Width = 355
+    Height = 152
+    Top = 160
+    Width = 357
     Anchors = [akTop, akLeft, akRight, akBottom]
+    AutoSize = True
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'Language Options'
-    ClientHeight = 113
-    ClientWidth = 351
+    ClientHeight = 127
+    ClientWidth = 353
     TabOrder = 2
     object LanguageSelectionLabel: TLabel
       AnchorSideLeft.Control = LanguageSettingsGroupBox
       AnchorSideTop.Control = LanguageSettingsGroupBox
       Left = 6
-      Height = 15
+      Height = 20
       Top = 6
-      Width = 106
+      Width = 133
       BorderSpacing.Around = 6
       Caption = 'Language Selection:'
       ParentColor = False
@@ -192,9 +197,9 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideTop.Control = LanguageSelectionComboBox
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 15
-      Top = 56
-      Width = 73
+      Height = 20
+      Top = 66
+      Width = 91
       BorderSpacing.Around = 6
       Caption = 'Character Set:'
       ParentColor = False
@@ -206,14 +211,14 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideRight.Control = LanguageSettingsGroupBox
       AnchorSideRight.Side = asrBottom
       Left = 6
-      Height = 23
-      Top = 27
-      Width = 339
+      Height = 28
+      Top = 32
+      Width = 341
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Top = 2
       BorderSpacing.Right = 6
       BorderSpacing.Bottom = 6
-      ItemHeight = 15
+      ItemHeight = 20
       Style = csDropDownList
       TabOrder = 0
     end
@@ -224,14 +229,14 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
       AnchorSideRight.Control = LanguageSettingsGroupBox
       AnchorSideRight.Side = asrBottom
       Left = 6
-      Height = 23
-      Top = 77
-      Width = 339
+      Height = 28
+      Top = 92
+      Width = 341
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Top = 2
       BorderSpacing.Right = 6
       BorderSpacing.Bottom = 6
-      ItemHeight = 15
+      ItemHeight = 20
       Style = csDropDownList
       TabOrder = 1
     end
@@ -245,21 +250,21 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 0
-    Height = 158
-    Top = 270
-    Width = 594
+    Height = 113
+    Top = 318
+    Width = 596
     Anchors = [akTop, akLeft, akRight, akBottom]
     AutoSize = True
     BorderSpacing.Top = 6
     Caption = 'Other Info'
-    ClientHeight = 140
-    ClientWidth = 590
+    ClientHeight = 88
+    ClientWidth = 592
     TabOrder = 3
     object StringInfo: TStringGrid
       Left = 6
-      Height = 128
+      Height = 76
       Top = 6
-      Width = 578
+      Width = 580
       Align = alClient
       BorderSpacing.Around = 6
       ColCount = 2
@@ -292,17 +297,17 @@ object ProjectVersionInfoOptionsFrame: TProjectVersionInfoOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = LanguageSettingsGroupBox
     Left = 0
-    Height = 131
-    Top = 133
+    Height = 152
+    Top = 160
     Width = 233
     BorderSpacing.Top = 6
     Caption = 'AttributesGroupBox'
-    ClientHeight = 113
+    ClientHeight = 127
     ClientWidth = 229
     TabOrder = 4
     object clbAttributes: TCheckListBox
       Left = 0
-      Height = 113
+      Height = 127
       Top = 0
       Width = 229
       Align = alClient
