--- a/ide/frames/desktop_options.lfm
+++ b/ide/frames/desktop_options.lfm
@@ -336,6 +336,8 @@ object DesktopOptionsFrame: TDesktopOptionsFrame
     BorderSpacing.Top = 6
     BorderSpacing.Right = 6
     ItemHeight = 0
+    ParentShowHint = False
+    ShowHint = True
     Style = csDropDownList
     TabOrder = 3
   end
@@ -373,6 +375,8 @@ object DesktopOptionsFrame: TDesktopOptionsFrame
     BorderSpacing.Left = 6
     Caption = 'AutoSaveProjectCheckBox'
     Enabled = False
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 5
     Visible = False
   end
@@ -387,6 +391,8 @@ object DesktopOptionsFrame: TDesktopOptionsFrame
     BorderSpacing.Left = 6
     Caption = 'AutoSaveEditorFilesCheckBox'
     Enabled = False
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 6
     Visible = False
   end
@@ -552,6 +558,8 @@ object DesktopOptionsFrame: TDesktopOptionsFrame
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'AskSavingOnlySessionCheckBox'
+    ParentShowHint = False
+    ShowHint = True
     TabOrder = 11
   end
 end
