--- a/ide/frames/oi_options.lfm
+++ b/ide/frames/oi_options.lfm
@@ -84,6 +84,8 @@ object OIOptionsFrame: TOIOptionsFrame
       Width = 155
       BorderSpacing.Top = 6
       Caption = 'OIShowHintCheckBox'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 0
     end
     object OIAutoShowCheckBox: TCheckBox
@@ -96,6 +98,8 @@ object OIOptionsFrame: TOIOptionsFrame
       BorderSpacing.Left = 6
       BorderSpacing.Top = 6
       Caption = 'OIAutoShowCheckBox'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 1
     end
     object OIBoldNonDefaultCheckBox: TCheckBox
@@ -108,6 +112,8 @@ object OIOptionsFrame: TOIOptionsFrame
       Width = 194
       BorderSpacing.Top = 6
       Caption = 'OIBoldNonDefaultCheckBox'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 2
     end
     object OIDrawGridLinesCheckBox: TCheckBox
@@ -121,6 +127,8 @@ object OIOptionsFrame: TOIOptionsFrame
       BorderSpacing.Top = 6
       BorderSpacing.Bottom = 6
       Caption = 'OIDrawGridLinesCheckBox'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 3
     end
     object OIShowGutterCheckBox: TCheckBox
@@ -133,6 +141,8 @@ object OIOptionsFrame: TOIOptionsFrame
       Width = 169
       BorderSpacing.Top = 6
       Caption = 'OIShowGutterCheckBox'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 4
     end
     object OIShowStatusBarCheckBox: TCheckBox
@@ -147,6 +157,8 @@ object OIOptionsFrame: TOIOptionsFrame
       BorderSpacing.Top = 6
       BorderSpacing.Bottom = 6
       Caption = 'OIShowStatusBarCheckBox'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 5
     end
     object OIShowInfoBoxCheckBox: TCheckBox
@@ -160,6 +172,8 @@ object OIOptionsFrame: TOIOptionsFrame
       BorderSpacing.Left = 6
       BorderSpacing.Top = 6
       Caption = 'OIShowInfoBoxCheckBox'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 6
     end
     object OIShowComponentTreeCheckBox: TCheckBox
@@ -173,6 +187,8 @@ object OIOptionsFrame: TOIOptionsFrame
       BorderSpacing.Left = 6
       BorderSpacing.Top = 6
       Caption = 'OIShowComponentTreeCheckBox'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 7
     end
     object OIOptsCenterLabel: TLabel
@@ -279,6 +295,8 @@ object OIOptionsFrame: TOIOptionsFrame
       Top = 6
       Width = 53
       BorderSpacing.Around = 6
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 0
       Value = 1
     end
